package com.estore.entity;

import jakarta.persistence.*;
import lombok.Data;
import java.time.LocalDateTime;
import java.util.List;

@Data
@Entity
@Table(name = "admins")
public class Admin {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long adminId;

    @OneToOne
    @JoinColumn(name = "user_id", nullable = false)
    private User user;

    @Column(nullable = false)
    private String department;

    @Column(nullable = false)
    private LocalDateTime createdAt;

    private LocalDateTime updatedAt;

    @PrePersist
    protected void onCreate() {
        createdAt = LocalDateTime.now();
    }

    @PreUpdate
    protected void onUpdate() {
        updatedAt = LocalDateTime.now();
    }

    public List<User> manageUsers() {
        // Implement user management logic
        return null;
    }

    public List<Product> manageProducts() {
        // Implement product management logic
        return null;
    }

    public List<Order> manageOrders() {
        // Implement order management logic
        return null;
    }

    public List<Promotion> managePromotions() {
        // Implement promotion management logic
        return null;
    }

    public Report generateReports() {
        // Implement report generation logic
        return new Report();
    }

    public boolean manageInventory() {
        // Implement inventory management logic
        return true;
    }
} 