package com.estore.entity;

import jakarta.persistence.*;
import lombok.Data;
import java.io.File;
import java.time.LocalDateTime;

@Data
@Entity
@Table(name = "reports")
public class Report {
    @Id
    @GeneratedValue(strategy = GenerationType.IDENTITY)
    private Long reportId;

    @Column(nullable = false)
    private String type;

    @Column(columnDefinition = "TEXT")
    private String data;

    @Column(nullable = false)
    private LocalDateTime createdAt;

    @Column(nullable = false)
    private String generatedBy;

    private LocalDateTime scheduledTime;
    private String scheduleInterval;

    @PrePersist
    protected void onCreate() {
        createdAt = LocalDateTime.now();
    }

    public boolean generate() {
        try {
            // Implement report generation logic based on type
            switch (type) {
                case "SALES":
                    generateSalesReport();
                    break;
                case "INVENTORY":
                    generateInventoryReport();
                    break;
                case "USER_ACTIVITY":
                    generateUserActivityReport();
                    break;
                default:
                    return false;
            }
            return true;
        } catch (Exception e) {
            return false;
        }
    }

    public File export(String format) {
        try {
            // Implement export logic based on format (PDF, Excel, CSV, etc.)
            switch (format.toUpperCase()) {
                case "PDF":
                    return exportToPDF();
                case "EXCEL":
                    return exportToExcel();
                case "CSV":
                    return exportToCSV();
                default:
                    return null;
            }
        } catch (Exception e) {
            return null;
        }
    }

    public boolean schedule(String interval) {
        try {
            this.scheduleInterval = interval;
            this.scheduledTime = calculateNextScheduleTime(interval);
            return true;
        } catch (Exception e) {
            return false;
        }
    }

    private void generateSalesReport() {
        // Implement sales report generation
    }

    private void generateInventoryReport() {
        // Implement inventory report generation
    }

    private void generateUserActivityReport() {
        // Implement user activity report generation
    }

    private File exportToPDF() {
        // Implement PDF export
        return null;
    }

    private File exportToExcel() {
        // Implement Excel export
        return null;
    }

    private File exportToCSV() {
        // Implement CSV export
        return null;
    }

    private LocalDateTime calculateNextScheduleTime(String interval) {
        LocalDateTime now = LocalDateTime.now();
        switch (interval.toUpperCase()) {
            case "DAILY":
                return now.plusDays(1);
            case "WEEKLY":
                return now.plusWeeks(1);
            case "MONTHLY":
                return now.plusMonths(1);
            default:
                return now;
        }
    }
} 