package com.estore.enums;

public enum Permission {
    MANAGE_USERS,
    MANAGE_PRODUCTS,
    MANAGE_ORDERS,
    MANAGE_PROMOTIONS,
    VIEW_REPORTS,
    MANAGE_INVENTORY,
    MANAGE_CATEGORIES,
    MANAGE_REVIEWS
} 