package com.estore.enums;

public enum UserRole {
    ADMIN,
    MANAGER,
    STAFF,
    CUSTOMER
} 